# prividema-fhe

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
core/: glwe.h
docs/: Doxyfile.in
examples/: CMakeLists.txt  exemples_PIR.c  exemples_privatematch.c
include/: ggsw.h  ggsw_ciphertext.h  ggsw_encrypt_params.h  ggsw_public_key.h  ggsw_secret_key.h  glwe.h  halfggsw_ciphertext.h
include/Convolution_Product/: my_vec_znx_fft.h
include/core/ggsw/: ggsw.h  ggsw_ciphertext.h  ggsw_encrypt_params.h  ggsw_key.h  halfggsw_ciphertext.h  partialggsw_ciphertext.h
include/core/glwe/: glwe.h  glwe_ciphertext.h  glwe_encrypt_params.h  glwe_key.h
include/ggsw/: ggsw.h  ggsw_encrypt_params.h  ggsw_key.h  halfggsw_ciphertext.h
include/glwe/: glwe_ciphertext.h  glwe_key.h
src/: CMakeLists.txt  ggsw.c
src/Convolution_Product/: CMakeLists.txt  my_vec_znx_fft.c
src/backend/: CMakeLists.txt
src/common/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/ggsw/: CMakeLists.txt  ggsw.c
src/core/glwe/: CMakeLists.txt  glwe.c
src/ggsw/: CMakeLists.txt
src/glwe/: CMakeLists.txt
src/schemes/: CMakeLists.txt
tests/: CMakeLists.txt  hello.c
tests/Convolution_Product/: conv_prod.c
tests/backend/: tests_backend.c
tests/core/: hello.c
tests/schemes/: tests_schemes.c
